# nix-flakes-hello-world

./: .gitignore  README.md
events/: README.md  flake.nix  pyproject.toml
events/zmqtest/: app.py
model/: README.md  flake.nix  pyproject.toml  requirements.txt
model/zmqtest/: app.py
vision/: flake.nix  pyproject.toml
vision/vision/: app.py
