[tool.poetry]
name = "zmqtest"
version = "0.1.0"
description = ""
authors = ["Joe Stubbs <joestubbs5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyzmq = "^25.0.0"
# pyevents = {url = "https://foo.bar"}
# pyevents = { url = "https://github.com/joestubbs/event-engine/releases/download/v0.1.0/pyevents-0.1.0.tar.gz" }
#pyevents = { url = "https://github.com/joestubbs/event-engine/releases/download/v0.1.0/pyevents-0.1.0-py3-none-any.whl"}
# pyevents = { git = "https://github.com/tapis-project/event-engine", subdirectory = "pyevents" }
tapis-pyevents = "^0.1.0"
pillow = "^9.4.0"
tapis-ctevents = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zmqtest = 'zmqtest.app:main'
