[tool.poetry]
name = "vision"
version = "0.1.0"
description = "An example with opencv, PILLOW and other libs."
authors = ["Joe Stubbs <joestubbs5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
pillow = "^9.4.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
vision = 'vision.app:main'
